manifests/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-api
  labels:
    job: node-api
    app: service-api
spec:
  selector:
    app: front-api
  ports:
    - name: flask-web 
      protocol: TCP
      port: 5000 # port exposed internally in the cluster
      targetPort: 5000 # the container port to send requests to
