manifests/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: flask.moonorb.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-api
              port:
                number: 5000
        - path: /metrics
          pathType: Prefix
          backend:
            service:
              name: front-api
              port:
                number: 5000
